# Win-It-Inline

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/win_it_inline/: cli.py  pipeline.py  settings.py
tests/: test_pipeline.py
