[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "win-it-inline"
version = "0.1.0"
description = "Inline analysis pipeline for CDT and GTO EPD data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "PyUber",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
win-it-inline = "win_it_inline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]